no styled components just css

--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,10 @@ body{
     #cccccc 20px
   );
 }
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
