--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body{
   background-color: white;
   background-image: repeating-linear-gradient(
-    to right,
+    to left,
     transparent,
     transparent 10px,
     #cccccc 10px,
