--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ html {
 
 body{
 background-color: var(--Light-grey);
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
 }
 
 :root {
@@ -28,33 +32,79 @@ background-color: var(--Light-grey);
 
 .container{
   display: grid;
-  justify-content: center;
+  justify-content: start;
   height: 651px;
   width: 840px;
   background-color: var(--White);
   padding: 56px;
+  border: 1px solid var(--Off-black);
 
-
-  border-bottom-right-radius: 12px;
+  border-bottom-right-radius: 200px;
+  border-top-left-radius: 24px;
+  border-top-right-radius: 24px;
+  border-bottom-left-radius: 24px;
 }
 
 .input-flex {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 24px;
+  justify-content: flex-start;
+  width: 728px;
+  height: 101px;
   gap: 1rem;
+  margin-bottom: 0px;
 }
 
 .input-container {
-  display: grid;
-  gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  height: 101px;
+  width: 160px;
+  margin: 0px;
 }
+
+.input-text {
+  color: var(--Smokey-grey);
+  font-size: 0.5rem;
+  font-weight: 700;
+  letter-spacing: 4px;
+  margin: 0px;
+  margin-bottom: 10px;
+}
+
+input {
+  width: 160px;
+  height: 72px;
+  margin: 0px;
+  border-radius: 8px;
+  border: 2px solid var(--Smokey-grey);
+  color: var(--Off-black);
+  font-size: 1rem;
+  text-align: center;
+  font-weight: 700;
+}
+
+input:focus {
+  outline: none;
+  border: 2px solid hsl(259deg 100% 65%);
+}
+
+.error-day, .error-month, .error-year {
+  color: var(--Light-red);
+  font-size: 8px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  margin: 0px;
+}
+
+
 
 .button-content {
   display: flex;
-  position: relative;
-  left: 300px;
+  width: 728px;
+  height: 96px;
+  justify-content: flex-end;
+  margin-bottom: 0px;
+  border-bottom-style: 2px solid var(--Smokey-grey);
 }
 
 .submit-btn {
@@ -66,15 +116,23 @@ background-color: var(--Light-grey);
   transition: background-color 0.3s ease;
   width: 96px;
   height: 96px;
+  margin: 0px;
 }
 
 .result-age {
+  display: flex;
+  flex-direction: column;
   color: var(--Off-black);
+  width: 728px;
+  height: 342px;
 }
 
 .result-age h1 {
-  display: flex;
-  gap: 50px;
+  margin: 0px;
+  font-size: 2rem;
+  font-weight: 800;
+  font-style: italic;
+
 }
 
 .output-day, .output-month, .output-year {
