--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ input:focus {
   margin: 0px;
 }
 
-
+/* Button styles */
 
 .button-content {
   display: flex;
@@ -122,7 +122,6 @@ input:focus {
   height: 96px;
   justify-content: flex-end;
   margin-bottom: 0px;
-  border-bottom-style: 2px solid var(--Smokey-grey);
 }
 
 .submit-btn {
@@ -135,6 +134,19 @@ input:focus {
   width: 96px;
   height: 96px;
   margin: 0px;
+}
+
+.submit-btn:hover {
+  background-color: var(--Off-black);
+}
+
+.border-bottom {
+  width: calc(100% - 96px);
+  border-bottom: solid 2px var(--Light-grey);
+  margin: 0;
+  position: relative;
+  bottom: 44px;
+  display: flex;
 }
 
 .result-age {
@@ -152,7 +164,67 @@ input:focus {
   font-style: italic;
 
 }
+/* Output styles */
 
 .output-day, .output-month, .output-year {
   color: var(--Purple);
+  margin-right: 0.8rem;
+}
+
+
+/* Media queries */
+
+@media screen and (max-width: 768px) {
+  :root {
+    font-size: 1.5rem;
+  }
+
+  .container {
+    height: 486px;
+    width: 343px;
+    padding: 48px 24px 48px 24px;
+  }
+
+  .input-flex {
+    width: 295px;
+    height: 76px;
+    gap: 0.5rem;
+  }
+
+  .input-container {
+    width: 100%;
+  }
+
+  .input-text {
+    font-size: 0.4rem;
+    margin-bottom: 8px;
+  }
+
+  input {
+    height: 48px;
+    font-size: 0.8rem;
+  }
+
+  .button-content {
+    width: 100%;
+    height: 48px;
+  }
+
+  .submit-btn {
+    width: 48px;
+    height: 48px;
+  }
+
+  .border-bottom {
+    width: calc(100% - 48px);
+    bottom: 24px;
+  }
+
+  .result-age {
+    height: 50%;
+  }
+
+  .result-age h1 {
+    font-size: 1.5rem;
+  }
 }
