--- a/src/index.css
+++ b/src/index.css
@@ -151,6 +151,7 @@ input:focus {
 
 .result-age {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   color: var(--Off-black);
   width: 728px;
@@ -183,48 +184,70 @@ input:focus {
     height: 486px;
     width: 343px;
     padding: 48px 24px 48px 24px;
+    border-bottom-right-radius: 100px;
   }
 
   .input-flex {
     width: 295px;
-    height: 76px;
-    gap: 0.5rem;
+    height: auto;
+    gap: 16px;
+    position: absolute;
   }
 
-  .input-container {
-    width: 100%;
-  }
+  /* .input-container {
+
+  } */
 
   .input-text {
-    font-size: 0.4rem;
-    margin-bottom: 8px;
+    font-size: 0.6rem;
+    letter-spacing: 4px;
+    margin: 0;
   }
 
   input {
-    height: 48px;
-    font-size: 0.8rem;
+    height: 54px;
+    width: 87.67px;
+    font-size: 0.7rem;
+    margin: 0;
   }
 
   .button-content {
-    width: 100%;
-    height: 48px;
+    width: 295px;
+    height: auto;
+    justify-content: center;
+    padding-top: 32px ;
   }
 
   .submit-btn {
-    width: 48px;
-    height: 48px;
+    width: 64px;
+    height: 64px;
   }
 
   .border-bottom {
-    width: calc(100% - 48px);
-    bottom: 24px;
+    display: none;
   }
 
   .result-age {
     height: 50%;
+    width: 295px;
   }
 
   .result-age h1 {
     font-size: 1.5rem;
+  }
+
+  /*Error states*/
+
+  .input-flex_error {
+
+  }
+
+
+  .error-text {
+
+  }
+
+  .error-day, .error-month, .error-year {
+    font-size: 10px;
   }
 }
