--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ height: 100vh;
 }
 
 input {
-  width: 160px;
+  width: 100%;
   height: 72px;
   margin: 0px;
   margin-bottom: 8px;
@@ -90,39 +90,12 @@ input:focus {
   border: 2px solid hsl(259deg 100% 65%);
 }
 
-/* Error styles */
-
-.input-flex_error {
-  height: 130px;
-}
-
-.error-input {
-  border: 1px solid var(--Light-red);
-}
-
-.error-text {
-  color: var(--Light-red);
-  font-size: 0.5rem;
-  font-weight: 700;
-  letter-spacing: 4px;
-}
-
-.error-day, .error-month, .error-year {
-  color: var(--Light-red);
-  font-size: 0.33rem;
-  font-weight: 700;
-  letter-spacing: 2px;
-  margin: 0px;
-}
-
 /* Button styles */
 
 .button-content {
   display: flex;
-  width: 728px;
-  height: 96px;
+  width: 100%;
   justify-content: flex-end;
-  margin-bottom: 0px;
 }
 
 .submit-btn {
@@ -150,6 +123,8 @@ input:focus {
   display: flex;
 }
 
+/*Result*/
+
 .result-age {
   display: flex;
   justify-content: center;
@@ -173,23 +148,45 @@ input:focus {
   margin-right: 0.8rem;
 }
 
+/* Error styles */
+
+.input-flex_error {
+  height: auto;
+}
+
+.error-input {
+  border: 1px solid var(--Light-red);
+}
+
+.error-text {
+  color: var(--Light-red);
+  font-size: 0.5rem;
+  font-weight: 700;
+  letter-spacing: 4px;
+}
+
+.error-day, .error-month, .error-year {
+  color: var(--Light-red);
+  font-size: 0.33rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+  margin: 0px;
+}
+
 
 /* Media queries */
 
 @media screen and (max-width: 768px) {
-  :root {
-    font-size: 1.5rem;
-  }
 
   .container {
     height: 486px;
-    width: 343px;
+    width: 100%;
     padding: 48px 24px 48px 24px;
     border-bottom-right-radius: 100px;
   }
 
   .input-flex {
-    width: 295px;
+    width: 100%;
     height: auto;
     gap: 16px;
     position: absolute;
@@ -213,7 +210,7 @@ input:focus {
   }
 
   .button-content {
-    width: 295px;
+    width: 100%;
     height: auto;
     justify-content: center;
     padding-top: 32px ;
