--- a/src/script.css
+++ b/src/script.css
@@ -8,14 +8,12 @@ html {
   scroll-behavior: smooth;
 }
 
-
-
-body{
-background-color: var(--Light-grey);
-display: flex;
-justify-content: center;
-align-items: center;
-height: 100vh;
+body {
+  background-color: var(--Light-grey);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 :root {
@@ -29,10 +27,9 @@ height: 100vh;
 
   font-size: 2rem;
   font-family: Poppins, sans-serif;
-
 }
 
-.container{
+.container {
   display: grid;
   justify-content: start;
   height: auto;
@@ -40,44 +37,35 @@ height: 100vh;
   background-color: var(--White);
   padding: 56px;
   border: 1px solid var(--Off-black);
-
-  border-bottom-right-radius: 200px;
-  border-top-left-radius: 24px;
-  border-top-right-radius: 24px;
-  border-bottom-left-radius: 24px;
+  border-radius: 24px;
 }
 
 .input-flex {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
   gap: 1rem;
-  margin-bottom: 0px;
-  position: relative;
-  right: 91px;
 }
 
 .input-container {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   max-width: 160px;
-  margin: 0px;
-  transition: height 0.3s ease;
+  margin-bottom: 16px;
 }
 
 .input-text {
   color: var(--Smokey-grey);
-  font-size: 0.5rem;
+  font-size: 0.8rem;
   font-weight: 700;
   letter-spacing: 4px;
-  margin: 0px;
   margin-bottom: 10px;
 }
 
 input {
   width: 100%;
-  height: 72px;
-  margin: 0px;
-  margin-bottom: 8px;
+  height: 54px;
   border-radius: 8px;
   border: 2px solid var(--Smokey-grey);
   color: var(--Off-black);
@@ -88,28 +76,24 @@ input {
 
 input:focus {
   outline: none;
-  border: 2px solid hsl(259deg 100% 65%);
+  border: 2px solid var(--Purple);
 }
-
-/* Button styles */
 
 .button-content {
   display: flex;
-  width: 100%;
-  justify-content: flex-end;
-  border-bottom: solid 2px var(--Light-grey);
+  justify-content: center;
+  margin-top: 32px;
 }
 
 .submit-btn {
   background-color: var(--Purple);
   color: var(--White);
   border: none;
-  border-radius: 50%; /* Make the button a circle */
+  border-radius: 50%;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  width: 96px;
-  height: 96px;
-  margin: 0px;
+  width: 64px;
+  height: 64px;
 }
 
 .submit-btn:hover {
@@ -117,43 +101,30 @@ input:focus {
 }
 
 .border-bottom {
-  width: calc(100% - 96px);
-
-  margin: 0;
-  position: relative;
-  bottom: 44px;
-  display: flex;
+  width: calc(100% - 64px);
+  border-bottom: solid 2px var(--Light-grey);
+  margin-top: 24px;
 }
-
-/*Result*/
 
 .result-age {
   display: flex;
   justify-content: center;
   flex-direction: column;
   color: var(--Off-black);
-  width: 728px;
-  height: 342px;
+  width: 100%;
+  margin-top: 32px;
 }
 
 .result-age h1 {
-  margin: 0px;
+  margin: 0;
   font-size: 2rem;
   font-weight: 800;
   font-style: italic;
-
 }
-/* Output styles */
 
 .output-day, .output-month, .output-year {
   color: var(--Purple);
   margin-right: 0.8rem;
-}
-
-/* Error styles */
-
-.input-flex_error {
-  height: auto;
 }
 
 .error-input {
@@ -162,74 +133,42 @@ input:focus {
 
 .error-text {
   color: var(--Light-red);
-  font-size: 0.5rem;
+  font-size: 0.8rem;
   font-weight: 700;
   letter-spacing: 4px;
 }
 
 .error-day, .error-month, .error-year {
   color: var(--Light-red);
-  font-size: 0.33rem;
+  font-size: 0.6rem;
   font-weight: 700;
   letter-spacing: 2px;
-  margin: 0px;
+  margin: 0;
 }
 
-
-/* Media queries */
-
 @media screen and (max-width: 768px) {
-
   .container {
-    padding: 48px 24px 48px 24px;
-    border-bottom-right-radius: 100px;
+    padding: 48px 24px;
   }
 
   .input-container {
     max-width: 100%;
   }
 
-
   input {
-    height: 54px;
-    font-size: 0.7rem;
-    margin: 0;
+    height: 48px;
   }
 
   .button-content {
-    width: 100%;
-    height: auto;
-    justify-content: center;
-    padding-top: 32px ;
+    margin-top: 24px;
   }
 
-  .submit-btn {
-    width: 64px;
-    height: 64px;
+  .border-bottom {
+    width: calc(100% - 48px);
+    margin-top: 16px;
   }
-
 
   .result-age {
-    width: 295px;
-    height: auto;
-  }
-
-  .result-age h1 {
-    font-size: 1.5rem;
-  }
-
-  /*Error states*/
-
-  .input-flex_error {
-
-  }
-
-
-  .error-text {
-
-  }
-
-  .error-day, .error-month, .error-year {
-    font-size: 10px;
+    margin-top: 24px;
   }
 }
