--- a/src/index.css
+++ b/src/index.css
@@ -33,8 +33,6 @@ height: 100vh;
 }
 
 .container{
-  display: grid;
-  justify-content: start;
   height: auto;
   width: 100%;
   background-color: var(--White);
@@ -53,7 +51,6 @@ height: 100vh;
   gap: 1rem;
   margin-bottom: 0px;
   position: relative;
-  right: 91px;
 }
 
 
@@ -98,7 +95,8 @@ input:focus {
   display: flex;
   width: 100%;
   justify-content: flex-end;
-  border-bottom: solid 2px var(--Light-grey);
+  position: relative;
+  /* border-bottom: solid 2px var(--Light-grey);  */
 }
 
 .submit-btn {
@@ -111,6 +109,7 @@ input:focus {
   width: 96px;
   height: 96px;
   margin: 0px;
+  z-index: 2;
 }
 
 .submit-btn:hover {
@@ -118,14 +117,15 @@ input:focus {
 }
 
 .border-bottom {
-  width: calc(100% - 96px);
-
-  margin: 0;
-  position: relative;
-  bottom: 44px;
-  display: flex;
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  width: 100%;
+  height: 2px;
+  background-color: var(--Light-grey);
+  z-index: 1;
 }
-
 /*Result*/
 
 .result-age {
@@ -184,6 +184,7 @@ input:focus {
   .container {
     padding: 48px 24px 48px 24px;
     border-bottom-right-radius: 100px;
+    width: 90%;
   }
 
   .input-container {
@@ -198,10 +199,17 @@ input:focus {
   }
 
   .button-content {
+    position: relative;
     width: 100%;
     height: auto;
     justify-content: center;
     padding-top: 32px ;
+  }
+
+
+  .border-bottom {
+    width: 100%;
+    top: 63px;
   }
 
   .submit-btn {
