--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ height: 100vh;
   width: 100%;
   background-color: var(--White);
   padding: 56px;
-  border: 1px solid var(--Off-black);
+  border: none;
 
   border-bottom-right-radius: 200px;
   border-top-left-radius: 24px;
@@ -77,7 +77,7 @@ input {
   margin: 0px;
   margin-bottom: 8px;
   border-radius: 8px;
-  border: 2px solid var(--Smokey-grey);
+  border: 1px solid var(--Light-grey);
   color: var(--Off-black);
   font-size: 1rem;
   text-align: center;
