--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 
 
 body{
-background-color: var(--Light-grey);
+background-color: var(--Off-white);
 display: flex;
 justify-content: center;
 align-items: center;
