--- a/src/index.css
+++ b/src/index.css
@@ -137,8 +137,9 @@ input:focus {
 
 .result-age h1 {
   margin: 0px;
+  height: 100px;
   font-size: 2.8rem;
-  font-weight: 800;
+  font-weight: 900;
   font-style: italic;
 
 }
